# reachy-imitation

./: .gitignore  2Destimation1.py  3Destimation1.py  IK_4+7.py  IK_4.py  IK_7.py  IK_8.py  README.md  connection2bras.py  controle_coude1.py  forward_kinematic.py  points_to_shoulder.py  practise_example_right.py  pyproject.toml  reachy_ik.py  scaling_joint_params.py  test_chatgpt2.py  test_chatgpt3.py  test_connection.py  vision_coude1.py  vision_epaule1.py  vision_profondeur.py
PinceMain/: HandGestureUtils.py  ModeleMedium.py  ModeleSemiMedium.py  ModeleSimple.py  controleMain.py  databuild.py
cinematique/: human_arm_kinematics.py
config/: CONSTANTS.py  human_model.yaml  mapping_config.yaml  robot_model.yaml
data/: joint_data_1.csv  joint_data_2.csv  joint_data_3.csv  joint_data_4.csv  joint_data_5.csv
imitation/: 2Destimation1.py  controle_coude1.py
kinematics/fk/: human_arm_fk.py  reachy_arm_fk.py
maria_code/: imitation_reachy.m
ml/: __init__.py
pince/: ModeleMedium.py  ModeleSemiMedium.py  ModeleSimple.py  controleMain.py  controleMainWithDepth.py  droit_main_roll_pitch.py
report/: collect_joint_data.py  custom_elbow_tracking_data.csv  custom_hand_tracking_data.csv  graph_pipeline.py  graph_sdk_pipeline.py  graphs_shoulder_pitch.py  helper_kinematics.py  jacob_comparison_claude.py  jacobian_comparisons.py  make_pipeline_graphs.py  right_arm_filtering.py  sdk_elbow_tracking_data.csv  sdk_hand_tracking_data.csv  visualize_joint_data.py
scripts/: collect_joint_data.py  dora_function.py  hand_tracking.py  realsense_test.py  test_connection.py  test_hand_rotations.py  test_realsense_frame_acquisition.py  visualize_joint_data.py
scripts/IK/: IK 4 R+H.py  IK 4+7 R+H.py  IK_4+7.py  IK_4.py  IK_7.py  custom_ik.py  custom_ik_with_jac.py
scripts/cinematique/: arm_visualizer.py  (+2 more)
src/: ImitationPipeline.py  RobotModelPipeline.py  imitation_system.py  main.py
src/utils/: hands.py  (+3 more)
utils/: angles.py
vision/: vision_epaule2.py  vision_profondeur.py
vision-realsense2/: vision_epaule3.py  vision_epaule4.py  vision_epaule_quaternion.py
(+44 files in other folders)
