[project]
name = "reachy-imitation"
version = "0.1.0"
description = "Using ML to teach Pollen Robotics' Reachy robot to imitate humans live."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.14",
    "numpy>=2.2.2",
    "reachy-sdk>=0.5.0",
    "pyrealsense2-macosx; platform_system == 'Darwin'",
    "pyrealsense2; platform_system == 'Windows' or platform_system == 'Linux'",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchinfo>=1.8.0",
    "pyyaml>=6.0.2",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.1",
    "rerun-sdk>=0.23.1",
    "rerun-loader-python-example-urdf",
]

[tool.uv.sources]
rerun-loader-python-example-urdf = { git = "https://github.com/rerun-io/rerun-loader-python-example-urdf.git" }
