[project]
name = "reachy-imitation"
version = "0.1.0"
description = "Using computer vision to teach Reachy 1 robot to shadow a human operator in real-time."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.14",
    "numpy>=2.2.2",
    "reachy-sdk>=0.5.0",
    "pyrealsense2-macosx; platform_system == 'Darwin'",
    "pyrealsense2; platform_system == 'Windows' or platform_system == 'Linux'",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchinfo>=1.8.0",
    "pyyaml>=6.0.2",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.1",
    "filterpy>=1.4.5",
]
